@@ -1,5 +1,10 @@
 2008-12-21  Ryan Lortie  <desrt@desrt.ca>
 
+	* src/trashapplet.c (trash_applet_monitor_changed): set the image from
+	the icon directly, now that we have the API to do so.
+
+2008-12-21  Ryan Lortie  <desrt@desrt.ca>
+
 	* src/trashapplet.c: use standard indentation style through-out
 
 2008-12-21  Ryan Lortie  <desrt@desrt.ca>
